# GG_MayaMCP

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  fastmcp.json  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml  publish-pypi.yml
docs/: index.md  prd.md  privacy.md
docs/adr/: 0001-commandport.md
docs/api/: reference.md
docs/spec/: overview.md  security.md  tools.md  transport.md
docs/usage/: claude-desktop-extension.md  client-setup.md  getting-started.md  maya-panel.md
packaging/claude-mcpb/: .mcpbignore  README.md  build.ps1  manifest.json  smoke_test.py
scripts/: enable_commandport.py  userSetup.py
src/maya_mcp/: __init__.py  code_mode.py  errors.py  server.py  tool_metadata.py  types.py
src/maya_mcp/maya_panel/: __init__.py  controller.py  panel.py  preferences.py
src/maya_mcp/registrars/: __init__.py  _progress.py  animation.py  attributes.py  connections.py  core.py  curve.py  mesh.py  modeling.py  nodes.py  scene.py  scripts.py  selection.py  shading.py  skin.py  viewport.py
src/maya_mcp/tools/: __init__.py  animation.py  attributes.py  connection.py  connections.py  curve.py  health.py  mesh.py  modeling.py  nodes.py  scene.py  scripts.py  selection.py  shading.py  skin.py  viewport.py
src/maya_mcp/transport/: __init__.py  commandport.py
src/maya_mcp/utils/: __init__.py  coercion.py  parsing.py  response_guard.py  script_config.py  script_validation.py  validation.py
tests/: __init__.py  test_client_compat_tools_list.py  test_code_mode.py  test_coercion.py  test_nodes_duplicate.py  test_nodes_parent.py  test_nodes_rename.py  test_response_guard.py  test_server_entrypoint.py  test_server_progress.py  test_server_scene_elicitation.py  test_tool_output_schemas.py  test_tools_animation.py  test_tools_attributes.py  test_tools_connections.py  test_tools_curve.py  test_tools_health_and_connection.py  test_tools_mesh.py  test_tools_modeling.py  test_tools_scene_nodes_selection.py  test_tools_scene_save.py  test_tools_scripts.py  test_tools_shading.py  test_tools_skin.py  test_tools_viewport.py  test_transport_commandport.py
tests/integration/: __init__.py  conftest.py  test_attributes.py  test_health_connection.py  test_nodes.py  test_scene.py  test_selection.py
